# light_management

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cppcheck_report.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json  reinstall-git-extensions.sh
.github/workflows/: build.yml  clang-format.yml  coverage.yml  cppcheck.yml  flawfinder-analysis.yml  mutation.yml
.tipi/: deps  id
cmake/check/: CMakeLists.txt
cmake/mull/: CMakeLists.txt
include/: anything.hpp  document.hpp
include/light_management/: color_dimmable_light_bulb.hpp  color_light_bulb.hpp  dimmable_light_bulb.hpp  dimmerable_light_bulb.hpp  document.hpp  light_bulb.hpp  non_copyable.hpp  room.hpp  type_traits.hpp
include/light_management/components/: color.hpp  level.hpp  light_concept.hpp  relay.hpp
include/light_management/include/: document.hpp
include/light_management/include/type_traits/: has_bool_reset.hpp  has_int_value.hpp  has_return_code_do_switch.hpp  has_void_draw.hpp  has_void_setColor.hpp  has_void_setFullScale.hpp
include/light_management/type_traits/: has_bool_reset.hpp  has_int_value.hpp  has_return_code_do_switch.hpp  has_void_draw.hpp  has_void_setColor.hpp  has_void_setFullScale.hpp  has_void_switchOff.hpp
include/sdk/: sdk.h
include/visitor_guide_allocators/: arena.h  arena_allocator.h  constants.h  scoped_arena_allocator.h  statically_allocated_arena.hpp  statically_allocated_arena_allocator.h
mull/: CMakeLists.txt  README.md  build.sh  hello-world  main.cpp
scripts/: clang-format.sh  coverage.sh  cppcheck.sh  find_no_assert.sh  mull.sh  shall_fail.sh
src/sdk/: CMakeLists.txt  sdk.c
test/: CMakeLists.txt  atomic_thread_fence.cppref.cpp  atomic_thread_fence.davide.cpp  brown_bag_mocking_strategies.cpp  brown_bag_tdd_demo.cpp  callback_check.cpp  checkcheck.cpp  consteval.cpp  cppstories_concept.cpp  crtp-nvi.cpp  elvis.cpp  entt.cpp  exceptional_stack.cpp  externally_locked.cpp  first_concept.cpp  freestanding_array.cpp  from_switch_case_to_polymorphism.cpp  hexagonal.cpp  integral_type.cpp  light_management.cpp  lights_collection.cpp  make_unique.cpp  memory_allocation.cpp  mkstemp.cpp  mull.cpp  not_null.cpp  not_null_ptr.cpp  out.cpp  overload_set_lambda.cpp  overload_set_macro.cpp  placement_new.cpp  pmr.cpp  pragmatic_type_erasure.cpp  pure_virtual_call.cpp  runtime_polymorphism.cpp  sdk_abstraction.cpp  sdk_impl.cpp  shared_ptr_or_default.cpp  signals.cpp  statically_allocated_string.cpp  (+10 more)
test/collezioni_polimorfiche_e_dove_trovarle/: CMakeLists.txt  README.md  entt.cpp  runtime_polymorphism.cpp  std_variant.cpp
test/visitor_guide_allocators/: arena.h  arena_allocator.h  constants.h
